fix: reserve logo space with aspect-ratio to prevent layout shift

--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -221,6 +221,7 @@
     display: block;
     width: 180px;
     height: auto;
+    aspect-ratio: 1;
     margin: 0 auto;
     user-select: none;
     -ms-user-select: none;
